			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04e: *********************************

BUG: (2/20/06, DN) Cell bounds restored incorrectly by Undo.
FIX: In EDatabase.undo restore bound for cells whose contents was not modified.

BUG: (2/20/06, DN) Incremental DRC show dialog on every cell.
FIX: In ErrorLoggerTree check if the logger is already shown.

BUG: (2/20/06, DN) Assertion in ServerJobManager and reconcilation dialog twice (Bug #820).
FIX: Fixed as a result of general Job cleaning.

IMP: (2/19/06, DN) Database access is protected by ReadWriteLock (exclusive write, shared read).
     Netlists for cells are created by demand to save memory.
     Drawback: GUI is inactive during library reading and other long CHANGE jobs.

BUG: (2/17/06, DN) CellBackup asserts failed because of incorrect calculation of cell bounds (Bug #819)
FIX: In Cell.getBounds() calculate bounds of subcells in case of BOUNDS_COMPUTE alse.

IMP: (2/17/06, DN) Tool's deamons are called once per Job in GUI thread.

IMP: (2/16/06, SMR) Better crossprobing with waveform window.

IMP: (2/16/06, DN) Undo system reimplemented based on snapshot.

BUG: (2/15/06, SMR) Selection of Exports by the "Select Object" and "Find Text"
     commands doesn't work (Bug #817)
FIX: In SelectObject.listClicked(), use Export name when highlighting.
     In EditWindow.findNextText(), use Export key when export is selected.

IMP: (2/15/06, RK) Make NCC recognize scalable MoCMOS transistors (Bugzilla# 602)

IMP: (2/15/06, RK) Add an NCC sub-menu that allows designer to add any NCC annotation. (Bugzilla: 646)

IMP: (2/15/06, RK) Re-implemented NCC command "Copy Schematic Names to Layout". It now copies Network names for all schematic/layout cell pairs.

IMP: (2/15/06, RK) Conversion of NCC to client server model

IMP: (2/14/06, SMR) Moved all requests for the "current cell" to the UserInterface object.
